# amazon-sagemaker-enet-tensorflow-distributed

./: .gitignore  README.md  pyproject.toml
datasets/camvid/: __init__.py  loader.py  preprocess.py
enet/: layers.py  model.py  utils.py
notebooks/: preprocess-camvid.ipynb  train-dataparallel.ipynb  train-modelparallel.ipynb  train-single.ipynb
scripts/: train_data_parallel.py  train_model_parallel.py  train_single.py
trainer/: data_parallel.py  logging.py  metrics.py  model_parallel.py  single.py
